--- a/manifest.json
+++ b/manifest.json
@@ -3,10 +3,44 @@
   "name": "Arte Gerativa Brasileira",
   "icons": [
     {
-      "src": "./favicon.ico",
-      "sizes": "256x256 48x48 16x16",
-      "type": "image/x-icon",
-      "purpose": "any maskable"
+      "src": "/assets/fav1024.png",
+      "type": "image/svg+xml",
+      "sizes": "1024x1024"
+    },
+    {
+      "src": "/assets/fav512.png",
+      "type": "image/svg+xml",
+      "sizes": "512x512"
+    },
+    {
+      "src": "/assets/fav256.png",
+      "type": "image/svg+xml",
+      "sizes": "256x256"
+    },
+    {
+      "src": "/assets/fav144.png",
+      "type": "image/svg+xml",
+      "sizes": "144x144"
+    },
+    {
+      "src": "/assets/fav128.png",
+      "type": "image/svg+xml",
+      "sizes": "128x128"
+    },
+    {
+      "src": "/assets/fav48.png",
+      "type": "image/svg+xml",
+      "sizes": "48x48"
+    },
+    {
+      "src": "/assets/fav32.png",
+      "type": "image/svg+xml",
+      "sizes": "32x32"
+    },
+    {
+      "src": "/assets/fav16.png",
+      "type": "image/svg+xml",
+      "sizes": "16x16"
     }
   ],
   "start_url": ".",
